objects/SRV_Survey_ARG__c.object
<CustomObject>
    <fields>
        <fullName>AcceptsCreditCardWhichOnes_AR__c</fullName>
        <label>Accepts Credit Card? Which ones?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccessLists_AR__c</fullName>
        <label>Access Lists</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccessPrice_AR__c</fullName>
        <label>Access Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 to 80</fullName>
                </value>
                <value>
                    <fullName>80 to 150</fullName>
                </value>
                <value>
                    <fullName>Only with Invitation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountName_AR__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actionable_AR__c</fullName>
        <label>Actionable?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_AR__c</fullName>
        <formula>AccountName_AR__r.AddressLine1_AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AfterOffice_AR__c</fullName>
        <label>After Office?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageAmountPerson_AR__c</fullName>
        <label>Average Amount per Person</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Drink</fullName>
                </value>
                <value>
                    <fullName>2 Drinks</fullName>
                </value>
                <value>
                    <fullName>more than 3 Drinks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageDaySale_AR__c</fullName>
        <label>Average Day Sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50 to 100</fullName>
                </value>
                <value>
                    <fullName>101 to 150</fullName>
                </value>
                <value>
                    <fullName>more than 151</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageNigthSale_AR__c</fullName>
        <label>Average Nigth Sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>80 to 100</fullName>
                </value>
                <value>
                    <fullName>101 to 150</fullName>
                </value>
                <value>
                    <fullName>151 to 200</fullName>
                </value>
                <value>
                    <fullName>more than 200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageTicket_AR__c</fullName>
        <label>Average Ticket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50 to 100</fullName>
                </value>
                <value>
                    <fullName>101 to 150</fullName>
                </value>
                <value>
                    <fullName>more than 151</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BenefitsClub_AR__c</fullName>
        <label>Benefits Club</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BottleHigherLowerpricebrandMenu_AR__c</fullName>
        <label>Bottle Higher Lower price brand in Menu</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BottleHigherLowerpriceinMenu_AR__c</fullName>
        <label>Bottle Higher Lower price in Menu</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branch_AR__c</fullName>
        <label>Branch?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrandExhibition_AR__c</fullName>
        <label>Brand exhibition?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrandImage_AR__c</fullName>
        <label>Brand Image</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrandsInDrinks_AR__c</fullName>
        <label>Brands in Drinks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessName_AR__c</fullName>
        <formula>AccountName_AR__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessType_AR__c</fullName>
        <formula>SUBSTITUTE(TEXT(AccountName_AR__r.Segmentation_Type_on_trade__c),&quot;_ARG&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_AR__c</fullName>
        <label>Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 to 50</fullName>
                </value>
                <value>
                    <fullName>51 to 150</fullName>
                </value>
                <value>
                    <fullName>100 to 350</fullName>
                </value>
                <value>
                    <fullName>351 to 800</fullName>
                </value>
                <value>
                    <fullName>more than 150</fullName>
                </value>
                <value>
                    <fullName>more than 800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_AR__c</fullName>
        <formula>Impact_ARG__c +  TEXT(Productivity_AR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (1 AND 3)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>1 - Bar, 2 - Disco, 3 - Restaurant</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard AR</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard UY</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactPosition_AR__c</fullName>
        <label>Contact Position</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CounterShare_AR__c</fullName>
        <label>Counter Share</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 and 10%</fullName>
                </value>
                <value>
                    <fullName>20 and 30%</fullName>
                </value>
                <value>
                    <fullName>more than 30%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounterSizeMeters_AR__c</fullName>
        <label>Counter/Size in Meters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_AR__c</fullName>
        <label>County</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DecoratedThem_AR__c</fullName>
        <label>Decorated? What theme?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_AR__c</fullName>
        <label>Delivery?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dinner_AR__c</fullName>
        <label>Dinner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DrinksMenu_AR__c</fullName>
        <label>Drinks Menu</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_AR__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeesSposonredUniform_AR__c</fullName>
        <label>Employees wear sponsored Uniform?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventsandCatering_AR__c</fullName>
        <label>Events and Catering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcecutMenu_AR__c</fullName>
        <label>Excecutive Menu</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GastronomicHub_AR__c</fullName>
        <label>Gastronomic Hub</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GlassHigherLowerpriceinMenu_AR__c</fullName>
        <label>Glass Higher Lower price in Menu</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HappyHours_AR__c</fullName>
        <label>Happy Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasTables_AR__c</fullName>
        <label>Has Tables</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HoursOpen_AR__c</fullName>
        <label>Hours Open</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 4hs</fullName>
                </value>
                <value>
                    <fullName>4 - 8hs</fullName>
                </value>
                <value>
                    <fullName>more than 8hs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseWineWhich_AR__c</fullName>
        <label>House Wine, which one?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_ARG__c</fullName>
        <description>%IMPACTO =  TOTAL IMPACTO / Max Ponderado de total de impacto</description>
        <label>%Impact</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportedWines_AR__c</fullName>
        <label>Imported wines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCorner_AR__c</fullName>
        <label>Is it a Coner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_PR_customer_AR__c</fullName>
        <label>Is PR Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KitchenType_AR__c</fullName>
        <label>Kitchen Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LargerRotationBrands_AR__c</fullName>
        <label>Larger Rotation Brands</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NeighborhoodSocioeconomicLevel_AR__c</fullName>
        <label>Neighborhood Socioeconomic Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>MIDDLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neighborhood_AR__c</fullName>
        <formula>AccountName_AR__r.Revenue_Neighbourhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neighborhood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberBottlesCounter_AR__c</fullName>
        <label>Number of Bottles on Counter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-30</fullName>
                </value>
                <value>
                    <fullName>30-60</fullName>
                </value>
                <value>
                    <fullName>more than 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberCounters_AR__c</fullName>
        <label>Number of Counters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Counter</fullName>
                </value>
                <value>
                    <fullName>2 Counters</fullName>
                </value>
                <value>
                    <fullName>3 Counters</fullName>
                </value>
                <value>
                    <fullName>more than 3 Counters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberDanceFloors_AR__c</fullName>
        <label>Number of Dance Floors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Dance Floor</fullName>
                </value>
                <value>
                    <fullName>2 Dance Floors</fullName>
                </value>
                <value>
                    <fullName>3 Dance Floors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OffersFood_AR__c</fullName>
        <label>Offers Food</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutdoorArea_AR__c</fullName>
        <label>Outdoor Area?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnParking_AR__c</fullName>
        <label>Own Parking?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeakDayHour_AR__c</fullName>
        <label>Peak Day and Hour</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_AR__c</fullName>
        <formula>AccountName_AR__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositionRestaurantBrand_AR__c</fullName>
        <label>Position of Restaurant Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>MIDDLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Productivity2__c</fullName>
        <label>Productivity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_AR__c</fullName>
        <label>% Productivity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSocioeconomicLevel_AR__c</fullName>
        <label>Public Socioeconomic Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>MIDDLE</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QtyDailyMeals_AR__c</fullName>
        <label>Qty Daily Meals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to 30</fullName>
                </value>
                <value>
                    <fullName>31 to 50</fullName>
                </value>
                <value>
                    <fullName>51 to 100</fullName>
                </value>
                <value>
                    <fullName>more than 101</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QtyNightlyMeals_AR__c</fullName>
        <label>Qty Nightly Meals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to 30</fullName>
                </value>
                <value>
                    <fullName>31 to 50</fullName>
                </value>
                <value>
                    <fullName>51 to 100</fullName>
                </value>
                <value>
                    <fullName>more than 101</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QtyRedWhitesSparklingWines_AR__c</fullName>
        <label>Qty Red, Whites and Sparkling Wines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receptionist_AR__c</fullName>
        <label>Receptionist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>References_AR__c</fullName>
        <formula>&quot;A: Alto Impacto&quot; &amp; BR() &amp;
&quot;B: Mediano Impacto&quot; &amp; BR() &amp;
&quot;C: Bajo Impacto&quot; &amp; BR() &amp;
&quot;1: Alta Productividad&quot; &amp; BR() &amp;
&quot;2: Media Productividad&quot; &amp; BR() &amp;
&quot;3: Baja Productividad&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>References</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seasonal_AR__c</fullName>
        <label>Seasonal?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_AR__c</fullName>
        <label>Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SmokingArea_AR__c</fullName>
        <label>Smoking Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sommelier_AR__c</fullName>
        <label>Sommelier?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SparklingLargerTurnover_AR__c</fullName>
        <label>Sparkling with Larger Turnover</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SquareMeters_AR__c</fullName>
        <label>Square Meters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_AR__c</fullName>
        <formula>AccountName_AR__r.Revenue_UF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetTransit_AR__c</fullName>
        <label>Street Transit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>MIDDLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValetParking_AR__c</fullName>
        <label>Valet Parking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VipArea_AR__c</fullName>
        <label>Vip Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_AR__c</fullName>
        <formula>AccountName_AR__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeeklyBoxesSparklingChamp_AR__c</fullName>
        <label>Weekly Boxes of Sparklings + Champagnes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 to 50 boxes</fullName>
                </value>
                <value>
                    <fullName>50 to 150 boxes</fullName>
                </value>
                <value>
                    <fullName>150 to 250 boxes</fullName>
                </value>
                <value>
                    <fullName>more than 250 boxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeeklyBoxesVodkaFernetRon_AR__c</fullName>
        <label>Weekly Boxes of Vodka + Fernet + Ron</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 to 10 boxes</fullName>
                </value>
                <value>
                    <fullName>10 to 30 boxes</fullName>
                </value>
                <value>
                    <fullName>30 to 50 boxes</fullName>
                </value>
                <value>
                    <fullName>more than 50 boxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeeklyBoxesWhiskysVodkasFernet_AR__c</fullName>
        <label>Weekly Boxes (Whislys + Vodkas + Fernet)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 to 5 boxes</fullName>
                </value>
                <value>
                    <fullName>5 to 10 boxes</fullName>
                </value>
                <value>
                    <fullName>10 to 20 boxes</fullName>
                </value>
                <value>
                    <fullName>more than 20 boxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeeklyWineSparkChampg_AR__c</fullName>
        <label>Weekly Wine+Sparkling+Champagne Boxes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 to 10 boxes</fullName>
                </value>
                <value>
                    <fullName>10 to 20 boxes</fullName>
                </value>
                <value>
                    <fullName>20 to 30 boxes</fullName>
                </value>
                <value>
                    <fullName>more than 30 boxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WiFi_AR__c</fullName>
        <label>Wi-Fi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WineCellar_AR__c</fullName>
        <label>Wine Cellar?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WineMenu_AR__c</fullName>
        <label>Wine Menu?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>0 to 20</fullName>
                </value>
                <value>
                    <fullName>20 to 50</fullName>
                </value>
                <value>
                    <fullName>more than 50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>